--- a/htmleditor/index.html
+++ b/htmleditor/index.html
@@ -7,7 +7,7 @@
             html, body { width: 100%; height: 100%; margin: 0; padding: 0; }
             body { display: flex; }
 
-            #filelist { resize: horizontal; }
+            #filelist { resize: horizontal; min-width: 312px; }
             #editor { flex: 1; }
         </style>
     </head>
