--- a/htmleditor/filelist.html
+++ b/htmleditor/filelist.html
@@ -67,7 +67,7 @@
                         link.innerText = "📁 " + file.name
                         link.setAttribute("href", "?" + fullpath)
                     } else {
-                        link.innerText = "🗎 " + file.name
+                        link.innerText = "📄 " + file.name
                         link.setAttribute("href", "editor.html?" + fullpath)
                         link.setAttribute("target", "editor")
                     }
