Added html block editor program

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Programme - hilderonny.de</title>
     </head>
     <body>
-        <p><a href="htmleditor/">HTML Editor</a></p>
+        <p><a href="htmleditor/">Plain HTML Editor</a></p>
+        <p><a href="blockeditor/">Block Editor</a></p>
     </body>
 </html>
