Added HTML Editing function to blockeditor

--- a/blockeditor/index.html
+++ b/blockeditor/index.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Block Editor</title>
-        <link rel="stylesheet" href="blockeditor.css" />
-        <script src="blockly_compressed.js"></script>
-        <script src="target/html/blocks.js"></script>
-        <script type="module" src="blockeditor.js"></script>
-    </head>
-    <body>
-        <div id="editor"></div>
-    </body>
-</html>
+<!DOCTYPE html><html><head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <title>Block Editor - hilderonny.de</title>
+  <link rel="stylesheet" href="index.css">
+
+</head><body>
+  <iframe src="filelist.html" id="filelist"></iframe>
+  <iframe name="editor" id="editor"></iframe>
+
+</body></html>
+<!--BLOCKDEF{"blocks":{"languageVersion":0,"blocks":[{"type":"html_html","id":"?TH:^9Ejew{Kk:)=^48Z","x":43,"y":112,"inputs":{"head":{"block":{"type":"html_title","id":"Q6(nyW$STXv157fGMYGT","fields":{"title":"Block Editor - hilderonny.de"},"next":{"block":{"type":"html_link","id":"L!no;h0qHU@,C~Hn{{Ns","fields":{"rel":"stylesheet","type":"","href":"index.css"}}}}},"body":{"block":{"type":"html_iframe","id":"eTgE?|G6x(rp`$VAYFP)","fields":{"src":"filelist.html","name":"","id":"filelist"},"next":{"block":{"type":"html_iframe","id":"o9kGgBB.6/D@e5xS$#X1","fields":{"src":"","name":"editor","id":"editor"}}}}}}}]},"toolbox":"html"}-->
