--- a/htmleditor/index.html
+++ b/htmleditor/index.html
@@ -3,13 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <title>HTML Editor - hilderonny.de</title>
-        <style>
-            html, body { width: 100%; height: 100%; margin: 0; padding: 0; }
-            body { display: flex; }
-
-            #filelist { resize: horizontal; min-width: 312px; }
-            #editor { flex: 1; }
-        </style>
+        <link rel="stylesheet" href="index.css" />
     </head>
     <body>
         
