--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-        <title>Programme - hilderonny.de</title>
-    </head>
-    <body>
-        <p><a href="htmleditor/">Plain HTML Editor</a></p>
-        <p><a href="blockeditor/">Block Editor</a></p>
-    </body>
-</html>
+<!DOCTYPE html><html><head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <title>Programme - hilderonny.de</title>
+
+</head><body>
+  <div>
+    <a href="htmleditor/">  Plain HTML Editor</a>
+  </div>
+  <div>
+    <a href="blockeditor/">  Block Editor</a>
+  </div>
+
+</body></html>
+<!--BLOCKDEF{"blocks":{"languageVersion":0,"blocks":[{"type":"html_html","id":"gVK_,A+Umu,+_%M*{j^m","x":129,"y":92,"inputs":{"head":{"block":{"type":"html_title","id":",|W8.,V!O1k@1#Gegc$M","fields":{"title":"Programme - hilderonny.de"}}},"body":{"block":{"type":"html_div","id":"nE91G8!m8NKw9sVxg@qQ","inputs":{"div":{"block":{"type":"html_a","id":"x5]ge$ZTm4-SnwJL`?aZ","fields":{"href":"htmleditor/"},"inputs":{"a":{"block":{"type":"html_text","id":"tq:(Q*Kf?^4MC2?l?czW","fields":{"text":"Plain HTML Editor"}}}}}}},"next":{"block":{"type":"html_div","id":"?xS~2h5-RNCCb~2Y}YS;","inputs":{"div":{"block":{"type":"html_a","id":"G6[D2O2FMGw3wN}=FTXb","fields":{"href":"blockeditor/"},"inputs":{"a":{"block":{"type":"html_text","id":"7TTl2N!(n1anQzYc~(qe","fields":{"text":"Block Editor"}}}}}}}}}}}}}]},"toolbox":"html"}-->
