--- a/htmleditor/index.html
+++ b/htmleditor/index.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-        <title>HTML Editor - hilderonny.de</title>
-        <link rel="stylesheet" href="index.css" />
-    </head>
-    <body>
-        
-        <iframe id="filelist" src="filelist.html"></iframe>
-        <iframe id="editor" name="editor"></iframe>
+<!DOCTYPE html><html><head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <title>HTML Editor - hilderonny.de</title>
+  <link rel="stylesheet" href="index.css">
 
-    </body>
-</html>
+</head><body>
+  <iframe src="filelist.html" id="filelist"></iframe>
+  <iframe name="editor" id="editor"></iframe>
+
+</body></html>
+<!--BLOCKDEF{"blocks":{"languageVersion":0,"blocks":[{"type":"html_html","id":"zXSzI[V.lmG#Oh4^lEc/","x":42,"y":63,"inputs":{"head":{"block":{"type":"html_title","id":"$#G(~KhGT$:ub(u@3c|`","fields":{"title":"HTML Editor - hilderonny.de"},"next":{"block":{"type":"html_link","id":"cXMkuwyj;!Phl)G+tD:y","fields":{"rel":"stylesheet","type":"","href":"index.css"}}}}},"body":{"block":{"type":"html_iframe","id":"$ncm|0a|PAHBAzt|am-b","fields":{"src":"filelist.html","name":"","id":"filelist"},"next":{"block":{"type":"html_iframe","id":"~-%vj;yESZ!AYx|/8pVn","fields":{"src":"","name":"editor","id":"editor"}}}}}}}]},"toolbox":"html"}-->
