--- a/htmleditor/editor.html
+++ b/htmleditor/editor.html
@@ -9,6 +9,7 @@
             #edit { display: block; flex: 1; font-family: monospace; resize: none; }
             #preview { flex: 1; display: none; }
             #preview.visible { display: block; }
+            #filepath { display: inline; }
         </style>
         <script type="module">
 
@@ -52,6 +53,7 @@
                 previewelement = document.getElementById("preview")
 
                 if (filepath) {
+                  document.getElementById("filepath").innerText = filepath
                     const filecontent = await fetch("/api/filesystem/" + filepath).then((response) => response.text())
                     editelement.textContent = filecontent
                     editelementchanged()
@@ -69,6 +71,7 @@
             <button id="savebutton">Speichern</button>
             <button id="deletebutton">Löschen</button>
             <button id="previewbutton">Vorschau</button>
+            <div id="filepath"></div>
         </div>
         <div id="content">
             <textarea id="edit"></textarea>
