--- a/blockeditor/editor.html
+++ b/blockeditor/editor.html
@@ -2,7 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" href="blockeditor.css">
   <script src="blockly_compressed.js"></script>
-  <script src="blockeditor.js" type="module"></script>
+  <script src="blockeditor_v2.js" type="module"></script>
 
 </head><body>
   <div id="toolbar">
