New HTML Blocks and Toolbox implemented

--- a/blockeditor/filelist.html
+++ b/blockeditor/filelist.html
@@ -1,20 +1,2 @@
-<!DOCTYPE html><html><head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <script src="filelist.js" type="module"></script>
-
-</head><body>
-  <div id="toolbar">
-    <button id="newfolderbutton">
-      Neuer Ordner</button>
-    <button id="newfilebutton">
-      Neue Datei</button>
-    <button id="deletefolderbutton">
-      Ordner löschen</button>
-  </div>
-  <div id="currentpath">
-  </div>
-  <div id="filelist">
-  </div>
-
-</body></html>
-<!--BLOCKDEF{"blocks":{"languageVersion":0,"blocks":[{"type":"html_html","id":"vlyb$a`^({`HvM-*CiC,","x":143,"y":61,"inputs":{"head":{"block":{"type":"html_script","id":"h{1;zL,H4%r_[9f~AJ!G","fields":{"src":"filelist.js","module":true}}},"body":{"block":{"type":"html_div","id":"gw^!fc]^`gCmhw~E8vD,","fields":{"id":"toolbar"},"inputs":{"content":{"block":{"type":"html_button","id":"R~}UMjfj_r8XhaU[^=(m","fields":{"id":"newfolderbutton"},"inputs":{"content":{"block":{"type":"html_text","id":"]u}YpHA~jWS)s4kxa;CT","fields":{"text":"Neuer Ordner"}}}},"next":{"block":{"type":"html_button","id":"tqo?-t?O*wOKKk(QZlI|","fields":{"id":"newfilebutton"},"inputs":{"content":{"block":{"type":"html_text","id":"e($_.L8lnixEF?VK7@D~","fields":{"text":"Neue Datei"}}}},"next":{"block":{"type":"html_button","id":"z4QB`SK!{)^?26|v?R5]","fields":{"id":"deletefolderbutton"},"inputs":{"content":{"block":{"type":"html_text","id":"d*m,+5iN7MBQrS$gw}gZ","fields":{"text":"Ordner löschen"}}}}}}}}}}},"next":{"block":{"type":"html_div","id":"n0N*YG]d*K{Ekydla%W!","fields":{"id":"currentpath"},"next":{"block":{"type":"html_div","id":"-qUr}|f?USi]3eGtI~`=","fields":{"id":"filelist"}}}}}}}}}]},"toolbox":"html"}-->
+<!DOCTYPE html><html><head><meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"><title></title>  <script src="filelist.js" type="module"></script></head><body>  <div id="toolbar">  <button id="newfolderbutton">Neuer Ordner</button><button id="newfilebutton">Neue Datei</button><button id="deletefolderbutton">Ordner löschen</button></div><div id="currentpath"></div><div id="filelist"></div></body></html>
+<!--BLOCKDEF{"blocks":{"languageVersion":0,"blocks":[{"type":"html","id":"vUd9eii1F;=?u5$M)~/z","x":105,"y":45,"fields":{"arg1":""},"inputs":{"arg2":{"block":{"type":"script","id":"Jv~i`-/v4tpv_gR7`Dlb","fields":{"arg1":"filelist.js","arg2":true}}},"arg3":{"block":{"type":"div","id":"k7juS99OJB`I;ChS/4|+","inputs":{"arg1":{"block":{"type":"attribute_id","id":"]@3)F7w0Kvh.~xb%K/^5","fields":{"arg1":"toolbar"}}},"arg2":{"block":{"type":"button","id":"2zXz,~##oOVg~ij(X[zF","fields":{"arg1":"Neuer Ordner"},"inputs":{"arg2":{"block":{"type":"attribute_id","id":"hCS[(ED,u11;D*;(qx}r","fields":{"arg1":"newfolderbutton"}}}},"next":{"block":{"type":"button","id":"e:k44P-ymk{JWILiQyiw","fields":{"arg1":"Neue Datei"},"inputs":{"arg2":{"block":{"type":"attribute_id","id":"BZ)$?E!*4{|qKTB7;wlc","fields":{"arg1":"newfilebutton"}}}},"next":{"block":{"type":"button","id":"Czd`hTG~)MG[a/ALpg}3","fields":{"arg1":"Ordner löschen"},"inputs":{"arg2":{"block":{"type":"attribute_id","id":"cay:/pf,*+4+,:Bi6:^9","fields":{"arg1":"deletefolderbutton"}}}}}}}}}}},"next":{"block":{"type":"div","id":"3Oe}pYTXili)GQ6|kazy","inputs":{"arg1":{"block":{"type":"attribute_id","id":"6i3z*zymgmQ+[!a3pHW{","fields":{"arg1":"currentpath"}}}},"next":{"block":{"type":"div","id":"}5ya511}:5^(HuVPHt!O","inputs":{"arg1":{"block":{"type":"attribute_id","id":"LZ*H4rs[oD_yvu{Gh{$j","fields":{"arg1":"filelist"}}}}}}}}}}}}]},"toolbox":"html_toolbox"}-->
