--- a/blockeditor/editor.html
+++ b/blockeditor/editor.html
@@ -1,25 +1,2 @@
-<!DOCTYPE html><html><head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="stylesheet" href="blockeditor.css">
-  <script src="blockly_compressed.js"></script>
-  <script src="blockeditor_v2.js" type="module"></script>
-
-</head><body>
-  <div id="toolbar">
-    <button id="savebutton">
-      Speichern</button>
-    <button id="deletebutton">
-      Löschen</button>
-    <button id="previewbutton">
-      Vorschau</button>
-    <div id="filepath">
-    </div>
-  </div>
-  <div id="content">
-    <div id="editor">
-    </div>
-    <iframe id="preview"></iframe>
-  </div>
-
-</body></html>
-<!--BLOCKDEF{"blocks":{"languageVersion":0,"blocks":[{"type":"html_html","id":"ffK+SN?J*ENHc%C!d}%3","x":121,"y":108,"inputs":{"head":{"block":{"type":"html_link","id":"j3k=O#|yCfA=7+|b(?=]","fields":{"rel":"stylesheet","type":"","href":"blockeditor.css"},"next":{"block":{"type":"html_script","id":"LlPOLUn=f/Mir$*jnP)9","fields":{"src":"blockly_compressed.js","module":false},"next":{"block":{"type":"html_script","id":"q9r-m?12~imr_y^NiT3P","fields":{"src":"blockeditor.js","module":true}}}}}}},"body":{"block":{"type":"html_div","id":";oB:S=gAnSC@Beh#+Pmi","fields":{"id":"toolbar"},"inputs":{"content":{"block":{"type":"html_button","id":"eFF2YQU|H;X;2hx6Ll$t","fields":{"id":"savebutton"},"inputs":{"content":{"block":{"type":"html_text","id":"n.43=3z[we(Cj9lx~p,N","fields":{"text":"Speichern"}}}},"next":{"block":{"type":"html_button","id":"+jQusF{bdI;Rutx#bx%%","fields":{"id":"deletebutton"},"inputs":{"content":{"block":{"type":"html_text","id":"n;`F/gFF+2a@G4}2(!RY","fields":{"text":"Löschen"}}}},"next":{"block":{"type":"html_button","id":"n`=r{ppIqBTl{iCbFbP9","fields":{"id":"previewbutton"},"inputs":{"content":{"block":{"type":"html_text","id":"HOK*9E/5)yu9F8cz%7A!","fields":{"text":"Vorschau"}}}},"next":{"block":{"type":"html_div","id":"Y,xF%V+=dU]C6ctV8nWn","fields":{"id":"filepath"}}}}}}}}}},"next":{"block":{"type":"html_div","id":"{x]o9a:vd4l:7},YYhS#","fields":{"id":"content"},"inputs":{"content":{"block":{"type":"html_div","id":"GNG;T#cSkeX`EyH)~?/J","fields":{"id":"editor"},"next":{"block":{"type":"html_iframe","id":"ygGyEheG6mYCbq8auVZS","fields":{"src":"","name":"","id":"preview"}}}}}}}}}}}}]},"toolbox":"html"}-->
+<!DOCTYPE html><html><head><meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"><title></title>  <link rel="stylesheet" href="blockeditor.css"><script src="blockly_compressed.js"></script><script src="blockeditor_v2.js" type="module"></script></head><body>  <div id="toolbar">  <button id="savebutton">Speichern</button><button id="deletebutton">Löschen</button><button id="previewbutton">Vorschau</button><div id="filepath"></div></div><div id="content">  <div id="editor"></div><iframe id="preview"></iframe></div></body></html>
+<!--BLOCKDEF{"blocks":{"languageVersion":0,"blocks":[{"type":"html","id":"#H[AHP;*CUI:p61J}^@w","x":175,"y":75,"fields":{"arg1":""},"inputs":{"arg2":{"block":{"type":"stylesheet","id":";PGDmvHyFfqWPu#Zf_@O","fields":{"arg1":"blockeditor.css"},"next":{"block":{"type":"script","id":"d}z%IAvS#X%J8],HV42g","fields":{"arg1":"blockly_compressed.js","arg2":false},"next":{"block":{"type":"script","id":"Ouhm,Nc*H]5ebR;iby%[","fields":{"arg1":"blockeditor_v2.js","arg2":true}}}}}}},"arg3":{"block":{"type":"div","id":"3jl8iv:@r0?fLYzZ,T@R","inputs":{"arg1":{"block":{"type":"attribute_id","id":"fUb[jNEA2Hg^7zae{;^^","fields":{"arg1":"toolbar"}}},"arg2":{"block":{"type":"button","id":"kk=7xk~2pHSU?_9Omp^.","fields":{"arg1":"Speichern"},"inputs":{"arg2":{"block":{"type":"attribute_id","id":"s(m%HJolub:FaHwr88vi","fields":{"arg1":"savebutton"}}}},"next":{"block":{"type":"button","id":",!K9k.+5XG)zC00zR/:g","fields":{"arg1":"Löschen"},"inputs":{"arg2":{"block":{"type":"attribute_id","id":"5s$p{L1#V:pWbUy7%g[(","fields":{"arg1":"deletebutton"}}}},"next":{"block":{"type":"button","id":"EctIXvED{Y%+O!fE(1b{","fields":{"arg1":"Vorschau"},"inputs":{"arg2":{"block":{"type":"attribute_id","id":"]F^1yM.BPWglNp|iI}s5","fields":{"arg1":"previewbutton"}}}},"next":{"block":{"type":"div","id":"w2I}9,a!#OI*;1Q}.Z!`","inputs":{"arg1":{"block":{"type":"attribute_id","id":"]8$+Sgza9U6v#;KeCSvW","fields":{"arg1":"filepath"}}}}}}}}}}}}},"next":{"block":{"type":"div","id":"!d=0s:*0BW4#:TE_^2IQ","inputs":{"arg1":{"block":{"type":"attribute_id","id":"SM%62Q|t[](eTA4DR0*a","fields":{"arg1":"content"}}},"arg2":{"block":{"type":"div","id":"C/(k^?5[#2.{{`M^+:4V","inputs":{"arg1":{"block":{"type":"attribute_id","id":"})71%8Ml[9FB;6l{5{@i","fields":{"arg1":"editor"}}}},"next":{"block":{"type":"iframe","id":"|{c0.WAg%+^_LCq^ur9Q","inputs":{"arg1":{"block":{"type":"attribute_id","id":"b~IQ]=G!:]Yf.NoYhaw2","fields":{"arg1":"preview"}}}}}}}}}}}}}}}]},"toolbox":"html_toolbox"}-->
