--- a/blockeditor/index.html
+++ b/blockeditor/index.html
@@ -1,11 +1,2 @@
-<!DOCTYPE html><html><head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Block Editor - hilderonny.de</title>
-  <link rel="stylesheet" href="index.css">
-
-</head><body>
-  <iframe src="filelist.html" id="filelist"></iframe>
-  <iframe name="editor" id="editor"></iframe>
-
-</body></html>
-<!--BLOCKDEF{"blocks":{"languageVersion":0,"blocks":[{"type":"html_html","id":"?TH:^9Ejew{Kk:)=^48Z","x":43,"y":112,"inputs":{"head":{"block":{"type":"html_title","id":"Q6(nyW$STXv157fGMYGT","fields":{"title":"Block Editor - hilderonny.de"},"next":{"block":{"type":"html_link","id":"L!no;h0qHU@,C~Hn{{Ns","fields":{"rel":"stylesheet","type":"","href":"index.css"}}}}},"body":{"block":{"type":"html_iframe","id":"eTgE?|G6x(rp`$VAYFP)","fields":{"src":"filelist.html","name":"","id":"filelist"},"next":{"block":{"type":"html_iframe","id":"o9kGgBB.6/D@e5xS$#X1","fields":{"src":"","name":"editor","id":"editor"}}}}}}}]},"toolbox":"html"}-->
+<!DOCTYPE html><html><head><meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"><title>Block Editor - hilderonny.de</title>  <link rel="stylesheet" href="index.css"></head><body>  <iframe id="t" src="filelist.html"></iframe><iframe id="editor" name="editor"></iframe></body></html>
+<!--BLOCKDEF{"blocks":{"languageVersion":0,"blocks":[{"type":"html","id":"#!tPFUX}O]NmRksZy3L-","x":165,"y":105,"fields":{"arg1":"Block Editor - hilderonny.de"},"inputs":{"arg2":{"block":{"type":"stylesheet","id":"tu.Vl/ZN!O;a=!t]rc^.","fields":{"arg1":"index.css"}}},"arg3":{"block":{"type":"iframe","id":"wOK6$l+r.o3GP-|I`h@+","inputs":{"arg1":{"block":{"type":"attribute_id","id":"LlgTh:%DBGJFn}5f1R:Y","fields":{"arg1":"t"},"inputs":{"arg2":{"block":{"type":"attribute_src","id":"EN]9k/j$}:e2j6a495WU","fields":{"arg1":"filelist.html"}}}}}}},"next":{"block":{"type":"iframe","id":"=R{3E5Pvc?Vl1uA.#f/U","inputs":{"arg1":{"block":{"type":"attribute_id","id":"|KZO`0`-jmtHAeW:]%`K","fields":{"arg1":"editor"},"inputs":{"arg2":{"block":{"type":"attribute_name","id":"{}LZUaQm;QSE:{OQ362N","fields":{"arg1":"editor"}}}}}}}}}}}}}]},"toolbox":"html_toolbox"}-->
