--- a/index.html
+++ b/index.html
@@ -1,14 +1,2 @@
-<!DOCTYPE html><html><head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Programme - hilderonny.de</title>
-
-</head><body>
-  <div>
-    <a href="htmleditor/">  Plain HTML Editor</a>
-  </div>
-  <div>
-    <a href="blockeditor/">  Block Editor</a>
-  </div>
-
-</body></html>
-<!--BLOCKDEF{"blocks":{"languageVersion":0,"blocks":[{"type":"html_html","id":"`CfsSG;(#gJMG_~RmL@N","x":160,"y":133,"inputs":{"head":{"block":{"type":"html_title","id":"8#3xehk[1QWA@a;[UF1t","fields":{"title":"Programme - hilderonny.de"}}},"body":{"block":{"type":"html_div","id":"^8ibfsM[=8K2rsVh0g$B","fields":{"id":""},"inputs":{"content":{"block":{"type":"html_a","id":"^1fjK6f{*-Kzq/SFqo/1","fields":{"href":"htmleditor/"},"inputs":{"a":{"block":{"type":"html_text","id":"(8#`]2+LQ|ceU}iFRbJF","fields":{"text":"Plain HTML Editor"}}}}}}},"next":{"block":{"type":"html_div","id":"G1G~?9(ac6h6k*tWth=:","fields":{"id":""},"inputs":{"content":{"block":{"type":"html_a","id":"=xk2KYE5KN5/skr7;s]_","fields":{"href":"blockeditor/"},"inputs":{"a":{"block":{"type":"html_text","id":"1FxlSpULQn$~R.5~qxbl","fields":{"text":"Block Editor"}}}}}}}}}}}}}]},"toolbox":"html"}-->
+<!DOCTYPE html><html><head><meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"><title>Programme - hilderonny.de</title></head><body>  <div>  <a href="htmleditor/">Plain HTML Editor</a></div><div>  <a href="blockeditor/">Block Editor</a></div></body></html>
+<!--BLOCKDEF{"blocks":{"languageVersion":0,"blocks":[{"type":"html","id":"MsH27_~snNNsz)w=)*nt","x":155,"y":75,"fields":{"arg1":"Programme - hilderonny.de"},"inputs":{"arg3":{"block":{"type":"div","id":"6Ja*on%[zHWg*Z4o:ncm","inputs":{"arg2":{"block":{"type":"a","id":"ehihB{^|3U[$7:Z56G}7","fields":{"arg1":"htmleditor/","arg2":"Plain HTML Editor"}}}},"next":{"block":{"type":"div","id":"Y!}@kz`WL$7`.UBR%;-2","inputs":{"arg2":{"block":{"type":"a","id":"c*,jY{R$nqe)8_shc@3g","fields":{"arg1":"blockeditor/","arg2":"Block Editor"}}}}}}}}}}]},"toolbox":"html_toolbox"}-->
